--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.0",
     "koa-static": "^2.0.0",
+    "koa2-cors": "^2.0.6",
     "monk": "^4.0.0",
     "snyk": "^1.24.6",
-    "superagent": "^3.8.3",
-    "swig": "^1.4.2"
+    "superagent": "^3.8.3"
   },
   "devDependencies": {
     "supertest": "^3.0.0",
