--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "prepublish": "npm run snyk-protect"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.3",
     "co": "^4.4.0",
     "co-body": "^5.0.0",
     "co-monk": "^1.0.0",
     "co-views": "^0.3.0",
     "https": "^1.0.0",
-    "koa": "^2.0.1",
+    "koa": "^2.8.1",
     "koa-compress": "^2.0.0",
     "koa-logger": "^1.3.0",
     "koa-route": "^2.4.0",
     "koa-static": "^2.0.0",
     "koa2-cors": "^2.0.6",
     "monk": "^4.0.0",
-    "snyk": "^1.24.6",
+    "snyk": "^1.217.3",
     "superagent": "^3.8.3"
   },
   "devDependencies": {
-    "supertest": "^3.0.0",
-    "mocha": "^3.1.1"
+    "mocha": "^3.1.1",
+    "supertest": "^3.4.2"
   },
   "snyk": true
 }
